--- a/views/bzl-mail/index/settings.phtml
+++ b/views/bzl-mail/index/settings.phtml
@@ -1,9 +1,28 @@
 <div class="container">
     <div class="row">
-        <?php echo $this->form()->openTag($form); ?>
-            <?php foreach($form as $element): ?>
-                <?php echo $this->formRow($element); ?>
-            <?php endforeach; ?>
-        <?php echo $this->form()->closeTag(); ?>
+        <div class="span12">
+            <h3>
+                Select preferred transport
+            </h3>
+            <?php echo $this->form()->openTag($form); ?>
+            <dl class="dl-horizontal">
+                <?php foreach($form->get('transport')->getValueOptions() as $value => $label): ?>
+                <dt>
+                    <input type="radio" name="transport" value="<?php echo $value; ?>" <?php echo $value == $form->get('transport')->getValue() ? 'checked' : ''; ?>/>
+                </dt>
+                <dd>
+                    <h5>
+                        <?php echo $label; ?>
+                    </h5>
+                </dd>
+                <?php endforeach; ?>
+                <dt>
+                </dt>
+                <dd>
+                    <button class="" type="submit">Continue &rightarrow;</button>
+                </dd>
+            </dl>
+            <?php echo $this->form()->closeTag(); ?>
+        </div>
     </div>
 </div>
