--- a/views/bzl-mail/index/settings.phtml
+++ b/views/bzl-mail/index/settings.phtml
@@ -1,3 +1,6 @@
+<?php
+
+?>
 <div class="container">
     <div class="row">
         <div class="span12">
@@ -8,7 +11,7 @@
             <dl class="dl-horizontal">
                 <?php foreach($form->get('transport')->getValueOptions() as $value => $label): ?>
                 <dt>
-                    <input type="radio" name="transport" value="<?php echo $value; ?>" <?php echo $value == $form->get('transport')->getValue() ? 'checked' : ''; ?>/>
+                    <input type="radio" name="transport" value="<?php echo $value; ?>" <?php echo $value == $settings->getTransport() ? 'checked' : ''; ?>/>
                 </dt>
                 <dd>
                     <h5>
