--- a/views/bzl-mail/index/transport-settings.phtml
+++ b/views/bzl-mail/index/transport-settings.phtml
@@ -1,10 +1,22 @@
 <div class="container">
     <div class="row">
         <div class="span12">
+            <h3><?php echo $option->getName(); ?> Settings</h3>
             <?php echo $this->form()->openTag($option->getForm()); ?>
+            <dl>
                 <?php foreach($option->getForm() as $element): ?>
-                    <?php echo $this->formRow($element); ?>
+                <dt>
+                    <?php if(!$element instanceof \Zend\Form\Element\Button && $element->getLabel()): ?>
+                        <?php echo $this->formLabel($element); ?>
+                    <?php endif; ?>
+                </dt>
+                <dd>
+                    <?php
+                        echo $this->formElement($element);
+                    ?>
+                </dd>
                 <?php endforeach; ?>
+            </dl>
             <?php echo $this->form()->closeTag(); ?>
         </div>
     </div>
